Fixed footer overflow bug

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -173,7 +173,7 @@ body  {
 /* footer */
 
 .footer{
-  margin-top: -4rem;
+  margin-top: -5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-family: 'source-sans-pro', sans-serif;
